--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    a {
+        @apply text-sm text-indigo-200 hover:text-indigo-300;
+    }
+    p {
+        @apply text-sm text-gray-200;
+    }
+    h1 {
+        @apply text-base font-semibold text-white;
+    }
+    h2 {
+        @apply text-base text-gray-50;
+    }
+}
