--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
     a {
-        @apply text-sm text-primary_a hover:text-accent_1;
+        @apply text-sm text-primary_text hover:text-primary_a;
     }
     p {
         @apply text-sm text-primary_text;
@@ -16,6 +16,6 @@
         @apply text-base text-primary_h2;
     }
     button{
-        @apply bg-gradient-to-tr from-accent_1 to-accent_2 hover:from-accent_2 hover:to-accent_2  p-2 text-primary_text
+        @apply border-2 rounded-md hover:bg-primary_h1  p-2 text-primary_text
     }
 }
